# cli-rust

./: Cargo.toml  Readme.md
src/: main.rs
tests/: integration_test.rs
