[package]
name = "catsay"
version = "0.1.0"
authors = ["dop3ch3f <ifeanyi.ibekie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.15"
colored = "1.7.0"
failure = "=0.1.5"
failure_derive = "=0.1.5"
backtrace = "=0.3.18"
exitfailure = "0.5.1"
predicates = "1.0.0"
assert_cmd = "0.12.0"